--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1 class="site-title">
             <a href="#" class="site-title-link">Jung In Hwan</a>
           </h1>
-          <p class="site-subtitle">Photography Portfolio</p>
+          <p class="site-subtitle">Photography</p>
         </div>
       </div>
     </header>
