--- a/collection.html
+++ b/collection.html
@@ -74,19 +74,30 @@
       // 현재 연도로 자동 업데이트
       document.getElementById("year").textContent = new Date().getFullYear();
 
+      // URL에서 컬렉션 파라미터 가져오기
+      const urlParams = new URLSearchParams(window.location.search);
+      const collectionId = urlParams.get("collection") || "all";
+
       // 전역 변수: 이미지 배열과 현재 인덱스
       let imageList = [];
       let currentImageIndex = -1;
 
-      // images.json을 불러와 갤러리를 채우는 스크립트
+      // 컬렉션 폴더의 images.json을 불러와 갤러리를 채우는 스크립트
       async function loadGallery() {
         const galleryEl = document.getElementById("gallery");
         if (!galleryEl) return;
 
+        if (collectionId === "all") {
+          console.error("컬렉션 페이지는 'all'을 지원하지 않습니다.");
+          return;
+        }
+
         try {
-          const res = await fetch("images.json", { cache: "no-store" });
+          // 컬렉션 폴더의 images.json 경로
+          const jsonPath = `collections/${collectionId}/images.json`;
+          const res = await fetch(jsonPath, { cache: "no-store" });
           if (!res.ok) {
-            console.error("images.json 로드 실패:", res.status);
+            console.error(`${jsonPath} 로드 실패:`, res.status);
             return;
           }
           const data = await res.json();
@@ -184,9 +195,40 @@
         const nextBtn = document.querySelector(".lightbox-nav-next");
 
         if (prevBtn && nextBtn) {
-          // 항상 화살표를 보여주지만, 필요하면 숨길 수도 있음
           prevBtn.style.display = imageList.length > 1 ? "flex" : "none";
           nextBtn.style.display = imageList.length > 1 ? "flex" : "none";
+        }
+      }
+
+      // 컬렉션 메뉴 로드
+      async function loadSidebar() {
+        const sidebarNav = document.querySelector(".sidebar-nav");
+        if (!sidebarNav) return;
+
+        try {
+          const res = await fetch("collections.json", { cache: "no-store" });
+          if (!res.ok) {
+            console.error("collections.json 로드 실패:", res.status);
+            return;
+          }
+          const collections = await res.json();
+          if (!Array.isArray(collections)) {
+            console.error("collections.json 형식이 올바르지 않습니다.");
+            return;
+          }
+
+          collections.forEach((collection) => {
+            const link = document.createElement("a");
+            link.href = collection.path;
+            link.textContent = collection.name;
+            link.className = "sidebar-link";
+            if (collection.id === collectionId) {
+              link.classList.add("active");
+            }
+            sidebarNav.appendChild(link);
+          });
+        } catch (error) {
+          console.error("사이드바 로드 중 오류:", error);
         }
       }
 
@@ -224,38 +266,6 @@
           }
         });
       })();
-
-      // 컬렉션 메뉴 로드
-      async function loadSidebar() {
-        const sidebarNav = document.querySelector(".sidebar-nav");
-        if (!sidebarNav) return;
-
-        try {
-          const res = await fetch("collections.json", { cache: "no-store" });
-          if (!res.ok) {
-            console.error("collections.json 로드 실패:", res.status);
-            return;
-          }
-          const collections = await res.json();
-          if (!Array.isArray(collections)) {
-            console.error("collections.json 형식이 올바르지 않습니다.");
-            return;
-          }
-
-          collections.forEach((collection) => {
-            const link = document.createElement("a");
-            link.href = collection.path;
-            link.textContent = collection.name;
-            link.className = "sidebar-link";
-            if (collection.id === "all") {
-              link.classList.add("active");
-            }
-            sidebarNav.appendChild(link);
-          });
-        } catch (error) {
-          console.error("사이드바 로드 중 오류:", error);
-        }
-      }
 
       loadGallery();
       loadSidebar();
