--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         if (!nav) return;
 
         let currentId = "index";
-        if (window.location.pathname.includes("wall.html")) currentId = "wall";
-        else if (window.location.pathname.includes("collection.html")) {
+        if (window.location.pathname.includes("collection.html")) {
           currentId = new URLSearchParams(window.location.search).get("collection") || "";
         }
 
@@ -51,14 +50,17 @@
           const collections = await res.json();
           if (!Array.isArray(collections)) return;
 
+          function displayName(id) {
+            return id && id.startsWith("_") ? id.slice(1) : (id || "");
+          }
           collections.forEach((collection, index) => {
             const link = document.createElement("a");
-            link.href = collection.path;
-            link.textContent = collection.name;
+            link.href = "collection.html?collection=" + encodeURIComponent(collection.id);
+            link.textContent = displayName(collection.id);
             link.className = "sidebar-link";
             if (collection.id === currentId) link.classList.add("active");
-            // WALL 다음에 간격 추가
-            if (collection.id === "wall") {
+            // _ 로 시작하는 컬렉션은 맨 위에 표시하고 아래 간격 추가
+            if (collection.id.startsWith("_")) {
               link.classList.add("wall-link");
             }
             nav.appendChild(link);
