--- a/collection.html
+++ b/collection.html
@@ -8,6 +8,13 @@
       name="description"
       content="Jung In Hwan의 사진 포트폴리오. 다양한 작품을 한눈에 감상해 보세요."
     />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Jung In Hwan Photography" />
+    <meta property="og:description" content="Jung In Hwan의 사진 포트폴리오. 다양한 작품을 한눈에 감상해 보세요." />
+    <meta property="og:image" content="og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet" />
